# videomaker

./: CMakeLists.txt  LICENSE  README.md
tests/: VideoMakerTests.cpp
videomaker/: VideoMaker.cpp  VideoMaker.h
